kubernetes/apps/tools/log-aggregator/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-aggregator
  namespace: tools
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.vaderrp.com
    gatus.home-operations.com/endpoint: |
      group: tools
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  hostnames:
    - log-aggregator.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-aggregator
          port: 8080
